--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -165,7 +165,7 @@
        Styles for the detailed view row in admin
        ------------------------------------------------------------ */
     .detailRow td {
-      background-color: #eef7ff; /* very light blue */
+      background-color: #FF9984; /* very light blue */
       padding: 0;
     }
     .detail-container {
