--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -137,7 +137,7 @@
        Highlight full ticket row if appealed
        ------------------------------------------------------------ */
     .appeal-highlight {
-      background-color: #fffbe6; /* light yellow background */
+      background-color: #FF6060; /* light yellow background */
     }
 
     /* ------------------------------------------------------------
