--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -367,7 +367,7 @@
        SECTION 4: ADMIN DASHBOARD (PRIVATE, WITH DETAIL VIEW)
        ============================================================== -->
   <div id="adminSection" class="container hidden">
-    <h2 class="section-title">Admin Dashboard</h2>
+    <h2 class="section-title">Admin Dashboard - Tickets in red mean they have been appealled </h2>
     <div id="adminTicketsContainer">
       <!-- Admin table will be injected here -->
     </div>
