--- a/newticketsdatabase.html
+++ b/newticketsdatabase.html
@@ -338,7 +338,7 @@
        SECTION 2: VIEW ALL TICKETS (PUBLIC, WITH INLINE APPEAL FORM)
        ============================================================== -->
   <div id="viewSection" class="container hidden">
-    <h2 class="section-title">All Submitted Tickets</h2>
+    <h2 class="section-title">All Submitted Tickets - red means appealled.</h2>
     <div id="ticketsListContainer">
       <!-- Public table + inline appeal form will be injected here -->
     </div>
